add contact form forwarding and little restructure

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ AWSinfrastructure/terraform.tfstate
 AWSinfrastructure/terraform.tfstate.backup
 inactive_files/
 *.tf
+*.zip
 !AWSinfrastructure/*.tf
 terraform.tfstate
 gpt_request.py
